tests/sealed_tvars/sealed_tvars.exp
Error ------------------------------------------------------------------------------------------ regression_tests.js:3:1

Internal error: read of Env_api.Make.FunctionThisLoc entry which has not been prepared for typechecking

      v-------------------------------------------
   3| function no_missing_env_entry_for_delete() {
   4|   declare var foo: {bar: string | void};
   5|   delete foo.bar; // ok
   6|   (foo.bar: void); // ok
   7| }
      ^


Error ------------------------------------------------------------------------------------------ regression_tests.js:9:1

Internal error: read of Env_api.Make.FunctionThisLoc entry which has not been prepared for typechecking

       v---------------------------------------------------------
    9| function no_missing_env_entry_for_illegal_type_binding() {
   10|   type A = number;
   11|   type A = number; // error, but no MissingEnvEntry internal error.
   12| }
       ^


Error ----------------------------------------------------------------------------------------- regression_tests.js:11:8

Cannot declare `A` [1] because the name is already bound. [name-already-bound]

   regression_tests.js:11:8
   11|   type A = number; // error, but no MissingEnvEntry internal error.
              ^

References:
   regression_tests.js:10:8
   10|   type A = number;
              ^ [1]


Error ----------------------------------------------------------------------------------------- regression_tests.js:14:1

Internal error: read of Env_api.Make.FunctionThisLoc entry which has not been prepared for typechecking

       v--------------------------------------
   14| function unresolved_class_self_tvar() {
   15|   class C { } // no weird unresolved tvar error
   16| }
       ^


Error ----------------------------------------------------------------------------------------- regression_tests.js:21:3

Missing an annotation on property `a`. [missing-local-annot]

   21|   a;
         ^^


Error ----------------------------------------------------------------------------------------- regression_tests.js:24:4

Missing an annotation on property `d`. [missing-local-annot]

   24|   d = 42 + 42;
          


Error ----------------------------------------------------------------------------------------- regression_tests.js:31:1

Internal error: read of Env_api.Make.FunctionThisLoc entry which has not been prepared for typechecking

   31| function f(x, {a, b}, ...y) { }
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------- regression_tests.js:31:12

Missing an annotation on `x`. [missing-local-annot]

   31| function f(x, {a, b}, ...y) { }
                  ^


Error ---------------------------------------------------------------------------------------- regression_tests.js:31:15

Missing an annotation on destructuring. [missing-local-annot]

   31| function f(x, {a, b}, ...y) { }
                     ^^^^^^


Error ---------------------------------------------------------------------------------------- regression_tests.js:31:26

Missing an annotation on rest parameter `y`. [missing-local-annot]

   31| function f(x, {a, b}, ...y) { }
                                ^



Found 10 errors
